@@ -63,12 +63,10 @@ Sockets are represented by their &fixnum-t; &file-des;s.</para>
   <member><code>(<function role="unix">sockatmark</function>
     &sock-r;)</code></member>
   <member><code>(<function role="unix">socket</function>
-    <replaceable>domain</replaceable> &type-r;
-    <replaceable>protocol</replaceable>)</code></member>
+    <replaceable>domain</replaceable> &type-r; &proto-r;)</code></member>
   <member><code>(<function role="unix">socketpair</function>
-    <replaceable>domain</replaceable> &type-r;
-    <replaceable>protocol</replaceable>)</code></member></simplelist>
- using same-named lisp functions in package
+    <replaceable>domain</replaceable> &type-r; &proto-r;)</code></member>
+ </simplelist>using same-named lisp functions in package
  <quote role="package">RAWSOCK</quote>.
  Additionally,<simplelist columns="1">
   <member><code>(<function>RAWSOCK:SOCK-READ</function> &sock-r; &buf-r;
@@ -110,7 +108,7 @@ Sockets are represented by their &fixnum-t; &file-des;s.</para>
    &integer-t;, or a platform-specific keyword, e.g.,
    <constant>:DGRAM</constant> stands for <constant>SOCK_DGRAM</constant>.
 </simpara></listitem></varlistentry>
-<varlistentry><term><type>int</type> <replaceable>protocol</replaceable></term>
+<varlistentry><term><type>int</type> &proto-r;</term>
  <listitem><simpara>A &nil; (stands for 0), &integer-t;, or a
    platform-specific keyword, e.g., <constant>:ARP</constant> stands
    for <constant>ETH_P_ARP</constant>.</simpara></listitem></varlistentry>
@@ -170,6 +168,18 @@ Sockets are represented by their &fixnum-t; &file-des;s.</para>
 <section id="rawsock-high-level"><title>High-Level Functions</title>
 <variablelist id="rawsock-high-level-list"><title>Functions that do not
   correspond to a single system call</title>
+<varlistentry><term><code>(RAWSOCK:PROTOCOL &optional-amp;
+   &proto-r;)</code></term>
+ <listitem><simpara>Call <function role="unix">getprotobyname</function>
+   when &proto-r; is a &string-t;,
+   or call <function role="unix">getprotobynumber</function> when
+   &proto-r; is an &integer-t;.
+   Return a <type>RAWSOCK:PROTOCOL</type> structure object.
+   When &proto-r; is &nil;, return a &list-t; of all known protocols using
+   <function role="unix">setprotoent</function>,
+   <function role="unix">getprotoent</function>, and
+   <function role="unix">endprotoent</function>.
+</simpara></listitem></varlistentry>
 <varlistentry><term><code>(RAWSOCK:SOCKET-OPTION &sock-r; &name-r;
    &key-amp; :LEVEL)</code></term>
  <term><code>(&setf; (RAWSOCK:SOCKET-OPTION &sock-r; &name-r;
@@ -182,12 +192,13 @@ Sockets are represented by their &fixnum-t; &file-des;s.</para>
    (See also &so-opt;.)</simpara></listitem></varlistentry>
 <varlistentry><term><code>(RAWSOCK:CONVERT-ADDRESS
    <replaceable>family</replaceable> &addr-r;)</code></term>
- <listitem><simpara>Convert between &string-t; and &integer-t; IP
-   &addr-r; representations using <function role="unix">inet_addr</function>,
-   <function role="unix">inet_ntoa</function>,
-   <function role="unix">inet_ntop</function>,
-   or <function role="unix">inet_pton</function>.
-</simpara></listitem></varlistentry>
+ <listitem><para>Convert between &string-t; and &integer-t; IP
+   &addr-r; representations using<simplelist columns="2">
+    <member><function role="unix">inet_addr</function></member>
+    <member><function role="unix">inet_ntoa</function></member>
+    <member><function role="unix">inet_ntop</function></member>
+    <member><function role="unix">inet_pton</function></member>
+</simplelist></para></listitem></varlistentry>
 <varlistentry id="make-sockaddr"><term><code>(RAWSOCK:MAKE-SOCKADDR
    <replaceable>family</replaceable> &optional-amp; &data-r;)</code></term>
  <listitem><simpara>Create a <type>sockaddr</type> object.
