@@ -9,7 +9,8 @@
   (:use #:lisp)
   (:shadowing-import-from "EXPORTING" #:defun)
   (:export #:buffer #:resize-buffer #:accept #:bind #:connect
-           #:getpeername #:getsockname
+           #:getpeername #:getsockname #:protocol #:protocol-p
+           #:protocol-name #:protocol-aliases #:protocol-proto
            #:sock-listen #:recv #:recvfrom #:recvmsg
            #:send #:sendmsg #:sendto #:socket-option
            #:socket #:socketpair #:sockatmark
@@ -29,6 +30,11 @@
 (defstruct (msghdr (:constructor make-msghdr (%data)))
   (%data (missing msghdr) :read-only t :type (vector (unsigned-byte 8))))
 )
+
+(defstruct (protocol (:constructor make-protocol (name aliases proto)))
+  (name "" :type string)
+  (aliases nil :type list)
+  (proto 0 :type integer))
 
 (defsetf socket-option (&rest args) (value) `(set-socket-option ,value ,@args))
 
