@@ -34,6 +34,8 @@ User visible changes
 * Fixed module rawsock on platforms with non-trivial struct sockaddr layout.
   Functions that take a BUFFER argument, also take :START and :END arguments.
   Renamed RAWSOCK:LISTEN to RAWSOCK:SOCK-LISTEN to avoid a conflict with CL.
+  New function RAWSOCK:PROTOCOL.
+  See <http://clisp.cons.org/impnotes/rawsock.html> for details.
 
 * Fixed module postgresql logging behavior.
 
